--- a/css/styles.css
+++ b/css/styles.css
@@ -228,7 +228,7 @@ nav a:hover::after {
     min-height: 65vh;
     background-image:
         linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)),
-        url("https://images.unsplash.com/photo-1519451241324-20b4ea2c4220?ixlib=rb-4.0.3&auto=format&fit=crop&w=1200&q=80");
+        url("../img/Main.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
